# pkg/eventclient/model__api_v1_events_batch_post_200_response.go
@@ -1,126 +1,0 @@
-/*
-Access Event Service
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-API version: 1.0.0
-*/
-
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-package openapi
-
-import (
-	"encoding/json"
-)
-
-// checks if the ApiV1EventsBatchPost200Response type satisfies the MappedNullable interface at compile time
-var _ MappedNullable = &ApiV1EventsBatchPost200Response{}
-
-// ApiV1EventsBatchPost200Response struct for ApiV1EventsBatchPost200Response
-type ApiV1EventsBatchPost200Response struct {
-	Results []EventResponse `json:"results,omitempty"`
-}
-
-// NewApiV1EventsBatchPost200Response instantiates a new ApiV1EventsBatchPost200Response object
-// This constructor will assign default values to properties that have it defined,
-// and makes sure properties required by API are set, but the set of arguments
-// will change when the set of required properties is changed
-func NewApiV1EventsBatchPost200Response() *ApiV1EventsBatchPost200Response {
-	this := ApiV1EventsBatchPost200Response{}
-	return &this
-}
-
-// NewApiV1EventsBatchPost200ResponseWithDefaults instantiates a new ApiV1EventsBatchPost200Response object
-// This constructor will only assign default values to properties that have it defined,
-// but it doesn't guarantee that properties required by API are set
-func NewApiV1EventsBatchPost200ResponseWithDefaults() *ApiV1EventsBatchPost200Response {
-	this := ApiV1EventsBatchPost200Response{}
-	return &this
-}
-
-// GetResults returns the Results field value if set, zero value otherwise.
-func (o *ApiV1EventsBatchPost200Response) GetResults() []EventResponse {
-	if o == nil || IsNil(o.Results) {
-		var ret []EventResponse
-		return ret
-	}
-	return o.Results
-}
-
-// GetResultsOk returns a tuple with the Results field value if set, nil otherwise
-// and a boolean to check if the value has been set.
-func (o *ApiV1EventsBatchPost200Response) GetResultsOk() ([]EventResponse, bool) {
-	if o == nil || IsNil(o.Results) {
-		return nil, false
-	}
-	return o.Results, true
-}
-
-// HasResults returns a boolean if a field has been set.
-func (o *ApiV1EventsBatchPost200Response) HasResults() bool {
-	if o != nil && !IsNil(o.Results) {
-		return true
-	}
-
-	return false
-}
-
-// SetResults gets a reference to the given []EventResponse and assigns it to the Results field.
-func (o *ApiV1EventsBatchPost200Response) SetResults(v []EventResponse) {
-	o.Results = v
-}
-
-func (o ApiV1EventsBatchPost200Response) MarshalJSON() ([]byte, error) {
-	toSerialize,err := o.ToMap()
-	if err != nil {
-		return []byte{}, err
-	}
-	return json.Marshal(toSerialize)
-}
-
-func (o ApiV1EventsBatchPost200Response) ToMap() (map[string]interface{}, error) {
-	toSerialize := map[string]interface{}{}
-	if !IsNil(o.Results) {
-		toSerialize["results"] = o.Results
-	}
-	return toSerialize, nil
-}
-
-type NullableApiV1EventsBatchPost200Response struct {
-	value *ApiV1EventsBatchPost200Response
-	isSet bool
-}
-
-func (v NullableApiV1EventsBatchPost200Response) Get() *ApiV1EventsBatchPost200Response {
-	return v.value
-}
-
-func (v *NullableApiV1EventsBatchPost200Response) Set(val *ApiV1EventsBatchPost200Response) {
-	v.value = val
-	v.isSet = true
-}
-
-func (v NullableApiV1EventsBatchPost200Response) IsSet() bool {
-	return v.isSet
-}
-
-func (v *NullableApiV1EventsBatchPost200Response) Unset() {
-	v.value = nil
-	v.isSet = false
-}
-
-func NewNullableApiV1EventsBatchPost200Response(val *ApiV1EventsBatchPost200Response) *NullableApiV1EventsBatchPost200Response {
-	return &NullableApiV1EventsBatchPost200Response{value: val, isSet: true}
-}
-
-func (v NullableApiV1EventsBatchPost200Response) MarshalJSON() ([]byte, error) {
-	return json.Marshal(v.value)
-}
-
-func (v *NullableApiV1EventsBatchPost200Response) UnmarshalJSON(src []byte) error {
-	v.isSet = true
-	return json.Unmarshal(src, &v.value)
-}
-
-
