# pkg/eventclient/model_error_response.go
@@ -1,0 +1,232 @@
+/*
+Access Event Service
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ErrorResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ErrorResponse{}
+
+// ErrorResponse struct for ErrorResponse
+type ErrorResponse struct {
+	Code string `json:"code"`
+	Message string `json:"message"`
+	Details NullableString `json:"details,omitempty"`
+}
+
+type _ErrorResponse ErrorResponse
+
+// NewErrorResponse instantiates a new ErrorResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewErrorResponse(code string, message string) *ErrorResponse {
+	this := ErrorResponse{}
+	this.Code = code
+	this.Message = message
+	return &this
+}
+
+// NewErrorResponseWithDefaults instantiates a new ErrorResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewErrorResponseWithDefaults() *ErrorResponse {
+	this := ErrorResponse{}
+	return &this
+}
+
+// GetCode returns the Code field value
+func (o *ErrorResponse) GetCode() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Code
+}
+
+// GetCodeOk returns a tuple with the Code field value
+// and a boolean to check if the value has been set.
+func (o *ErrorResponse) GetCodeOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Code, true
+}
+
+// SetCode sets field value
+func (o *ErrorResponse) SetCode(v string) {
+	o.Code = v
+}
+
+// GetMessage returns the Message field value
+func (o *ErrorResponse) GetMessage() string {
+	if o == nil {
+		var ret string
+		return ret
+	}
+
+	return o.Message
+}
+
+// GetMessageOk returns a tuple with the Message field value
+// and a boolean to check if the value has been set.
+func (o *ErrorResponse) GetMessageOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.Message, true
+}
+
+// SetMessage sets field value
+func (o *ErrorResponse) SetMessage(v string) {
+	o.Message = v
+}
+
+// GetDetails returns the Details field value if set, zero value otherwise (both if not set or set to explicit null).
+func (o *ErrorResponse) GetDetails() string {
+	if o == nil || IsNil(o.Details.Get()) {
+		var ret string
+		return ret
+	}
+	return *o.Details.Get()
+}
+
+// GetDetailsOk returns a tuple with the Details field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+// NOTE: If the value is an explicit nil, `nil, true` will be returned
+func (o *ErrorResponse) GetDetailsOk() (*string, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return o.Details.Get(), o.Details.IsSet()
+}
+
+// HasDetails returns a boolean if a field has been set.
+func (o *ErrorResponse) HasDetails() bool {
+	if o != nil && o.Details.IsSet() {
+		return true
+	}
+
+	return false
+}
+
+// SetDetails gets a reference to the given NullableString and assigns it to the Details field.
+func (o *ErrorResponse) SetDetails(v string) {
+	o.Details.Set(&v)
+}
+// SetDetailsNil sets the value for Details to be an explicit nil
+func (o *ErrorResponse) SetDetailsNil() {
+	o.Details.Set(nil)
+}
+
+// UnsetDetails ensures that no value is present for Details, not even an explicit nil
+func (o *ErrorResponse) UnsetDetails() {
+	o.Details.Unset()
+}
+
+func (o ErrorResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ErrorResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	toSerialize["code"] = o.Code
+	toSerialize["message"] = o.Message
+	if o.Details.IsSet() {
+		toSerialize["details"] = o.Details.Get()
+	}
+	return toSerialize, nil
+}
+
+func (o *ErrorResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"code",
+		"message",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varErrorResponse := _ErrorResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varErrorResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ErrorResponse(varErrorResponse)
+
+	return err
+}
+
+type NullableErrorResponse struct {
+	value *ErrorResponse
+	isSet bool
+}
+
+func (v NullableErrorResponse) Get() *ErrorResponse {
+	return v.value
+}
+
+func (v *NullableErrorResponse) Set(val *ErrorResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableErrorResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableErrorResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableErrorResponse(val *ErrorResponse) *NullableErrorResponse {
+	return &NullableErrorResponse{value: val, isSet: true}
+}
+
+func (v NullableErrorResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableErrorResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
